welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:4: error: ';' expected but 'def' found.
def faireV() {
^